fix: center align title text in RenderTest styles

--- a/app/Components/RenderTest/renderTeste.module.css
+++ b/app/Components/RenderTest/renderTeste.module.css
@@ -41,7 +41,7 @@
 .title {
   font-size: 1.5rem;
   color: #222;
-  text-align: justify;
+  text-align: center;
   margin: 1rem;
   font-weight: bold;
 }
